# protoc-gen-doc

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  plugin.go  plugin_test.go  renderer_test.go  resources.go  template_test.go
cmd/protoc-gen-doc/: BUILD.bazel
data/: markdown.tmpl  request.json
examples/proto/: BUILD.bazel
extensions/: BUILD.bazel
extensions/google_api_http/: BUILD.bazel
extensions/lyft_validate/: BUILD.bazel
extensions/validator_field/: BUILD.bazel  validator_field.go
fixtures/: BUILD.bazel
resources/: BUILD.bazel  markdown.tmpl
script/: push_to_docker.sh
