load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["google_api_http.go"],
    importpath = "github.com/example/project/extensions/google_api_http",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pseudomuto_protoc_gen_doc//extensions:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["google_api_http_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_pseudomuto_protoc_gen_doc//extensions:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions/google_api_http:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)
