load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["lyft_validate.go"],
    importpath = "github.com/example/project/extensions/lyft_validate",
    visibility = ["//visibility:public"],
    deps = [
        "//thirdparty/github.com/envoyproxy/protoc-gen-validate/validate:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["lyft_validate_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//thirdparty/github.com/envoyproxy/protoc-gen-validate/validate:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions/lyft_validate:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
