load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["validator_field.go"],
    importpath = "github.com/example/project/extensions/validator_field",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_mwitkow_go_proto_validators//:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["validator_field_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_mwitkow_go_proto_validators//:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions:go_default_library",
        "@com_github_pseudomuto_protoc_gen_doc//extensions/validator_field:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
